# ability_ability_base

./: BUILD.gn  OAT.xml  README.en.md  README.md  ability_base.gni  bundle.json
.gitee/: CODEOWNERS
frameworks/native/configuration/src/: configuration_convertor.cpp
frameworks/native/want/src/: element_name.cpp  want.cpp  want_params.cpp
interfaces/inner_api/base/include/: base_def.h  base_interfaces.h  base_object.h  bool_wrapper.h  byte_wrapper.h  double_wrapper.h  float_wrapper.h  int_wrapper.h  light_refbase.h  long_wrapper.h  remote_object_wrapper.h  short_wrapper.h  string_wrapper.h  user_object_base.h  user_object_wrapper.h  zchar_wrapper.h
interfaces/inner_api/base/src/: base_object.cpp  bool_wrapper.cpp  byte_wrapper.cpp  double_wrapper.cpp  float_wrapper.cpp  int_wrapper.cpp  long_wrapper.cpp  remote_object_wrapper.cpp  short_wrapper.cpp  string_wrapper.cpp  user_object_wrapper.cpp  zchar_wrapper.cpp
interfaces/inner_api/configuration/include/: global_configuration_key.h
interfaces/inner_api/log/include/: ability_base_log_wrapper.h  parcel_macro_base.h
interfaces/inner_api/want/include/: element_name.h  pac_map.h  want.h  want_params.h
interfaces/kits/c/cwant/include/: want.h  want_manager.h
interfaces/kits/c/cwant/src/: want.cpp  want_manager.cpp
interfaces/kits/native/configuration/include/: configuration.h  configuration_convertor.h  global_configuration_key.h
interfaces/kits/native/configuration/src/: configuration.cpp  configuration_convertor.cpp
interfaces/kits/native/extractortool/include/: constants.h  extract_resource_manager.h  extractor.h  file_mapper.h  file_path_utils.h  zip_file.h  zip_file_reader.h  zip_file_reader_mem.h
interfaces/kits/native/extractortool/src/: extract_resource_manager.cpp  extractor.cpp  file_mapper.cpp  file_path_utils.cpp  zip_file.cpp  zip_file_reader.cpp  zip_file_reader_io.cpp  zip_file_reader_mem.cpp
interfaces/kits/native/session_info/include/: session_info.h  session_info_constants.h
test/: BUILD.gn
test/fuzztest/: BUILD.gn
test/fuzztest/arraywrapperfifth_fuzzer/: BUILD.gn  arraywrapperfifth_fuzzer.cpp  arraywrapperfifth_fuzzer.h
test/fuzztest/arraywrapperfirst_fuzzer/: BUILD.gn  arraywrapperfirst_fuzzer.cpp  arraywrapperfirst_fuzzer.h
test/fuzztest/arraywrapperfouth_fuzzer/: BUILD.gn  arraywrapperfouth_fuzzer.cpp  arraywrapperfouth_fuzzer.h
test/fuzztest/arraywrappersecond_fuzzer/: BUILD.gn  arraywrappersecond_fuzzer.cpp  arraywrappersecond_fuzzer.h
test/fuzztest/arraywrapperthird_fuzzer/: BUILD.gn  arraywrapperthird_fuzzer.cpp  arraywrapperthird_fuzzer.h
test/fuzztest/boolwrapper_fuzzer/: BUILD.gn  boolwrapper_fuzzer.cpp  boolwrapper_fuzzer.h
test/fuzztest/intwrapper_fuzzer/: BUILD.gn  intwrapper_fuzzer.cpp  intwrapper_fuzzer.h
test/fuzztest/longwrapper_fuzzer/: BUILD.gn  longwrapper_fuzzer.cpp  longwrapper_fuzzer.h
test/fuzztest/operationfirst_fuzzer/: BUILD.gn  operationfirst_fuzzer.cpp  operationfirst_fuzzer.h
test/fuzztest/operationsecond_fuzzer/: BUILD.gn  operationsecond_fuzzer.cpp  operationsecond_fuzzer.h
test/fuzztest/remoteobjectwrapper_fuzzer/: BUILD.gn  remoteobjectwrapper_fuzzer.cpp  remoteobjectwrapper_fuzzer.h
test/fuzztest/stringwrapper_fuzzer/: BUILD.gn  stringwrapper_fuzzer.cpp  stringwrapper_fuzzer.h
test/fuzztest/wanteighth_fuzzer/: BUILD.gn  wanteighth_fuzzer.cpp  wanteighth_fuzzer.h
test/fuzztest/wantfifth_fuzzer/: BUILD.gn  wantfifth_fuzzer.cpp  wantfifth_fuzzer.h
test/fuzztest/wantfirst_fuzzer/: BUILD.gn  wantfirst_fuzzer.cpp  wantfirst_fuzzer.h
test/fuzztest/wantfourth_fuzzer/: BUILD.gn  wantfourth_fuzzer.cpp  wantfourth_fuzzer.h
test/fuzztest/wantninth_fuzzer/: BUILD.gn  wantninth_fuzzer.cpp  wantninth_fuzzer.h
test/fuzztest/wantparamsfifth_fuzzer/: BUILD.gn  wantparamsfifth_fuzzer.cpp  wantparamsfifth_fuzzer.h
test/fuzztest/wantparamsfirst_fuzzer/: BUILD.gn  wantparamsfirst_fuzzer.cpp  wantparamsfirst_fuzzer.h
test/fuzztest/wantparamsfour_fuzzer/: BUILD.gn  wantparamsfour_fuzzer.cpp  wantparamsfour_fuzzer.h
test/fuzztest/wantparamssecond_fuzzer/: BUILD.gn  wantparamssecond_fuzzer.cpp  wantparamssecond_fuzzer.h
test/fuzztest/wantparamsthird_fuzzer/: BUILD.gn  wantparamsthird_fuzzer.cpp  wantparamsthird_fuzzer.h
test/fuzztest/wantparamswrapperjson_fuzzer/: BUILD.gn  wantparamswrapperjson_fuzzer.cpp  wantparamswrapperjson_fuzzer.h
test/fuzztest/wantsecond_fuzzer/: BUILD.gn  wantsecond_fuzzer.cpp  wantsecond_fuzzer.h
test/fuzztest/wantseventh_fuzzer/: BUILD.gn  wantseventh_fuzzer.cpp  wantseventh_fuzzer.h
test/fuzztest/wantsixth_fuzzer/: BUILD.gn  wantsixth_fuzzer.cpp  wantsixth_fuzzer.h
test/fuzztest/wantthird_fuzzer/: BUILD.gn  wantthird_fuzzer.cpp  wantthird_fuzzer.h
test/fuzztest/wantthird_fuzzer/corpus/: all_empty.txt  missing_abilityName.txt  missing_abilityName_type_flags.txt  missing_action.txt  missing_bundleName.txt  missing_bundleName_action.txt  missing_deviceId.txt  missing_deviceId_bundleName_uri.txt  missing_deviceId_parameters.txt  missing_deviceId_type.txt  missing_deviceId_type_flags.txt  missing_flags.txt  missing_parameters.txt  missing_type.txt  missing_uri.txt  original.txt
test/unittest/: BUILD.gn
test/unittest/base/: base_object_test.cpp  base_test.cpp  bool_wrapper_test.cpp  byte_wrapper_test.cpp  double_wrapper_test.cpp  float_wrapper_test.cpp  int_wrapper_test.cpp  long_wrapper_test.cpp  short_wrapper_test.cpp  string_wrapper_test.cpp  user_object_wrapper_test.cpp  zchar_wrapper_test.cpp
test/unittest/configuration/: base_configuration_test.cpp
test/unittest/cwant/: capi_want_manager_test.cpp  capi_want_test.cpp
test/unittest/extractor/: extractor_test.cpp
test/unittest/session_info/: session_info_test.cpp
test/unittest/viewdata/: page_node_info_test.cpp  rect_test.cpp  view_data_test.cpp
test/unittest/want/: array_wrapper_test.cpp  extra_params_test.cpp  operation_test.cpp  pac_map_second_test.cpp  pac_map_test.cpp  skills_test.cpp  uri_test.cpp  want_params_test.cpp  want_params_wrapper_json_test.cpp  want_params_wrapper_test.cpp  want_test.cpp
(+34 files in other folders)
