# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/ability/ability_base/ability_base.gni")

group("fuzztest") {
  testonly = true

  deps = [
    "arraywrapperfirst_fuzzer:fuzztest",
    "arraywrappersecond_fuzzer:fuzztest",
    "arraywrapperthird_fuzzer:fuzztest",
    "wantfifth_fuzzer:fuzztest",
    "wantfirst_fuzzer:fuzztest",
    "wantfourth_fuzzer:fuzztest",
    "wantparamsfirst_fuzzer:fuzztest",
    "wantparamssecond_fuzzer:fuzztest",
    "wantparamsthird_fuzzer:fuzztest",
    "wantsecond_fuzzer:fuzztest",
    "wantsixth_fuzzer:fuzztest",
    "wantthird_fuzzer:fuzztest",
  ]
}
